--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header class="site-header">
+  <div class="snorlax"></div>
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
