--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,11 +26,17 @@ layout: default
       {%- for post in posts -%}
       <li>
         <span class="post-meta">{{ post.date | date: date_format }}</span>
+        <span>
+          {% for tag in post.tags %}
+            {% capture tag_name %}{{ tag }}{% endcapture %}
+            <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+          {% endfor %}
+        </span>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
           </a>
-          <a href="{{ post.url | relative_url }}#disqus_thread">Comments</a>
+          <!-- <a href="{{ post.url | relative_url }}#disqus_thread">Comments</a> -->
         </h3>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
