--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -11,3 +11,9 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 }
+blockquote {
+	font-size: 16px;
+	background-color: #f0f0f0;
+	padding: 10px;
+	font-style: normal;
+}
