--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ comment: true
     overflow: hidden;
     background-color: #f1f1f1;
   }
-  
+
   #button {
     display: inline-block;
     background-color: #A5CCF1;
@@ -60,6 +60,7 @@ comment: true
   #button:hover {
     cursor: pointer;
     background-color: #333;
+    text-decoration: none;
   }
   #button:active {
     background-color: #555;
