--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -31,17 +31,25 @@ blockquote {
 }
 .post-content { text-align: justify; }
 
-#roman-list {
+#roman-list, #number-list {
   counter-reset: list;
 }
 
-#roman-list > li {
+#roman-list, #number-list > li {
     list-style: none;
     position: relative;
 }
+
 #roman-list > li:before {
     counter-increment: list;
     content: "(" counter(list, lower-roman) ") ";
+    position: absolute;
+    left: -1.4em;
+}
+
+#number-list > li:before {
+    counter-increment: list;
+    content: "(" counter(list, decimal) ") ";
     position: absolute;
     left: -1.4em;
 }
