edit caption css

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -65,4 +65,16 @@
 	.post-footer {
 		font-size: 15px;
 	}
+
+	.post-content figure > figcaption {
+	    all: revert;
+	    font-size: 12px;
+	    width: 70%;
+	    text-align: center;
+	    margin-left: 15%;
+	}
+
+	.post-content figure > figcaption > p {
+	    all: revert;
+	}
 </style>
