--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -15,5 +15,5 @@
     });
   </script>
 {{- end }}
-<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
