--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 <script src="https://utteranc.es/client.js"
-        repo="https://github.com/trunghng/trunghng.github.io"
+        repo="trunghng/trunghng.github.io"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
