add dpg+minor edit

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -17,8 +17,14 @@
 		text-align: left;
 	}
 
-	.post-content a {
-		text-decoration: none;
+	.post-content a,
+	.post-content a:link,
+	.post-content a:visited,
+	.post-content a:hover,
+	.post-content a:active {
+		box-shadow: none;
+		font-weight: bold;
+		color: steelblue;
 	}
 
 	.post-content ol,
