--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -37,11 +37,21 @@
 	    margin-left: 30px;
 	}
 
-	#roman-list, #number-list {
+	#roman-list, #number-list, #alpha-list {
 		counter-reset: section;
 	}
 
-	#roman-list, #number-list > li {
+	#roman-list > li {
+	    list-style: none;
+	    position: relative;
+	}
+
+	#number-list > li {
+	    list-style: none;
+	    position: relative;
+	}
+
+	#alpha-list > li {
 	    list-style: none;
 	    position: relative;
 	}
@@ -50,12 +60,19 @@
 	    counter-increment: section;
 	    content: "(" counter(section, lower-roman) ") ";
 	    position: absolute;
-	    left: -0.75em;
+	    left: -2em;
 	}
 
 	#number-list > li:before {
 	    counter-increment: section;
 	    content: "(" counter(section, decimal) ") ";
+	    position: absolute;
+	    left: -2em;
+	}
+
+	#alpha-list > li:before {
+	    counter-increment: section;
+	    content: "(" counter(section, lower-alpha) ") ";
 	    position: absolute;
 	    left: -2em;
 	}
