--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -100,4 +100,20 @@
 	.post-content figure > figcaption > p {
 	    all: revert;
 	}
+
+	.post-content h3 {
+		font-size: 28px;
+	}
+
+	.post-content h4 {
+		font-size: 24px;
+	}
+
+	.post-content h5 {
+		font-size: 20px;
+	}
+
+	.post-content h6 {
+		font-size: 16px;
+	}
 </style>
